added quit key as a variable in config Commented and cleaned up the code/config

--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,11 @@
 HOST =
 #Buffersize for string trough UDP
 BUFSIZE = 20
+#UDP port from LTCreader server
 UDP_PORT = 53001
+#Fontsize for all text
 FONT_SIZE = 100
 FONT_COLOR = white
 BACKGROUND_COLOR = black
+#Single letter or key: x, <Escape>, <Up arrow>
+EXIT_KEY = <Escape>
