--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,5 @@ FONT_COLOR = white
 BACKGROUND_COLOR = black
 #Single letter or key: x, <Escape>, <Up arrow>
 EXIT_KEY = <Escape>
+#Turns True or False the show time option. System time!!!
+SHOW_TIME = False
