Changed how the update loop is handled and separated the LTC and clock.

--- a/config.ini
+++ b/config.ini
@@ -13,4 +13,4 @@ BACKGROUND_COLOR = black
 #Single letter or key: x, <Escape>, <Up arrow>
 EXIT_KEY = <Escape>
 #Turns True or False the show time option. System time!!!
-SHOW_TIME = False
+SHOW_TIME = True
